# todo-app

./: QWEN.md  README.md  interactive_todo.py  main.py  pyproject.toml  requirements.txt
.qwen/commands/: sp.adr.toml  sp.analyze.toml  sp.checklist.toml  sp.clarify.toml  sp.constitution.toml  sp.git.commit_pr.toml  sp.implement.toml  sp.phr.toml  sp.plan.toml  sp.reverse-engineer.toml  sp.specify.toml  sp.tasks.toml  sp.taskstoissues.toml
.specify/memory/: constitution.md
.specify/scripts/powershell/: check-prerequisites.ps1  create-new-feature.ps1
.specify/templates/: adr-template.md  checklist-template.md  phr-template.prompt.md  plan-template.md  tasks-template.md
history/prompts/001-todo-cli-app/: 1-create-todo-plan.plan.prompt.md  1-create-todo-spec.spec.prompt.md  1-create-todo-tasks.tasks.prompt.md  1-implement-todo-app.green.prompt.md
history/prompts/002-todo-intermediate-features/: 1-create-intermediate-features-plan.plan.prompt.md  1-create-intermediate-features-spec.spec.prompt.md  1-create-intermediate-features-tasks.tasks.prompt.md  (+1 more)
specs/001-todo-cli-app/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-todo-intermediate-features/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-todo-advanced-features/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/todo/: __init__.py  __main__.py  cli.py  errors.py  task.py  todo_list.py  utils.py
tests/integration/: test_cli.py
tests/unit/: test_task.py  test_todo_list.py
(+12 files in other folders)
