[project]
name = "todo-cli-app"
version = "0.1.0"
description = "A command-line todo application"
authors = [{name = "User", email = "user@example.com"}]
requires-python = ">=3.13"
dependencies = [
    "dateparser>=1.2.2",
    "plyer>=2.1.0",
    "rich>=13.0.0",
]

[project.scripts]
todo = "src.todo.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
